--- a/common/pom.xml
+++ b/common/pom.xml
@@ -12,7 +12,11 @@
     <artifactId>common</artifactId>
 
     <dependencies>
-
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.3</version>
+        </dependency>
     </dependencies>
 
 
