--- a/master/src/main/resources/application.properties
+++ b/master/src/main/resources/application.properties
@@ -21,7 +21,12 @@ spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
 spring.datasource.filters=stat, wall
 spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
 
-spring.redis.pool.max-idle=8
-spring.redis.pool.min-idle=0
-spring.redis.pool.max-active=8
-spring.redis.pool.max-wait=-1
+#redis
+spring.redis.hostName=127.0.0.1
+spring.redis.port=6379
+spring.redis.password=adminpwd
+spring.redis.pool.maxActive=8
+spring.redis.pool.maxWait=-1
+spring.redis.pool.maxIdle=8
+spring.redis.pool.minIdle=0
+spring.redis.timeout=0
